devops/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: social-media
  labels:
    name: social-media
    app: social-media-app
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
  labels:
    name: ingress-nginx
